--- a/backend_deposit/templates/deposit/incomings_list.html
+++ b/backend_deposit/templates/deposit/incomings_list.html
@@ -38,7 +38,7 @@
 
      {% include 'includes/paginator.html' %}
      <div class="container-fluid ">
-     <table id="table" class="table table-bordered table-hover" style="font-size: 14px; line-height: 100%; padding: .1rem .1rem .1rem .1rem">
+     <table id="table" class="table table-bordered table-hover table-sm" style="font-size: 14px; line-height: 100%; padding: .1rem .1rem .1rem .1rem">
      <thead class="">
      <tr class="">
            <th>id</th>
@@ -52,7 +52,7 @@
            <th>Бирпай</th>
        </tr>
      </thead>
-     <tbody>
+     <tbody style="text-align: end" >
          {% for incoming in page_obj %}
          <tr title="{{incoming.comment|default_if_none:'' }}" id="pay{{ incoming.id }}"
                  {% if incoming.birpay_id or not incoming.birpay_id|default_if_none:'-'%}
