add script trash reload every 5 sec

--- a/backend_deposit/templates/deposit/trash_list.html
+++ b/backend_deposit/templates/deposit/trash_list.html
@@ -35,3 +35,11 @@
     </div>
 
 {% endblock %}
+
+{% block javascript %}
+    <script>
+        setTimeout(function(){
+            window.location.reload();
+            }, 5000);
+    </script>
+{% endblock %}
