--- a/backend_deposit/templates/deposit/stats.html
+++ b/backend_deposit/templates/deposit/stats.html
@@ -1,124 +1,29 @@
 {% extends 'base.html' %}
-{% block title %}Домашняя страница{% endblock %}
+{% block title %}Статистика{% endblock %}
 
 
 {% block content %}
+{% with request.path as path %}
+{% url 'deposit:stats'  as all_stat %}
+{% url 'deposit:stats_card'  as card_stat %}
+{% url 'deposit:stats_day'  as day_stat %}
 {% include 'includes/operator_menu.html' %}
     <div class="">
       {% include 'includes/switcher2.html' %}
     </div>
 
+
     <div class="row">
-
-    <div class="col-md-auto">
-        <table id="table" class="table w-auto table-hover table-bordered" style="font-size: medium; line-height: 100%; padding: .1rem .1rem .1rem .1rem">
-        <caption align="top">Статистика по картам</caption>
-
-          <thead>
-            <tr>
-               <th>Карта</th>
-               <th>Посл<br>id</th>
-               <th>посл.<br>платеж</th>
-               <th>Кол-во</th>
-               <th>Сумма</th>
-            </tr>
-          </thead>
-
-          <tbody>
-              {% for obj in cards %}
-                <tr class="text-end">
-                  <td>{{ obj.recipient }}</td>
-                  <td>{{ obj.last_id }}</td>
-                  <td>{{ obj.last_date|date:'d.m.Y' }}</td>
-                  <td>{{ obj.count }}</td>
-                  <td>{{ obj.sum|floatformat:0 }}</td>
-                </tr>
-              {% endfor %}
-          </tbody>
-
-        </table>
+        {% if path == card_stat or path == all_stat %}
+            <div class="col-md-auto">
+                {% include 'includes/stats_card_table.html' %}
+            </div>
+        {% endif %}
+        {% if path == day_stat or path == all_stat %}
+            <div class="col-md-auto">
+                {% include 'includes/stats_day_table.html' %}
+            </div>
+        {% endif %}
     </div>
-
-
-    <div class="col-md-auto">
-
-            <table id="table" class="table w-auto table-hover table-bordered table-sm" style="font-size: small; line-height: 100%; padding: .1rem .1rem .1rem .1rem">
-            <caption align="top">Статистика по дням</caption>
-
-          <thead>
-
-          <tr>
-               <th></th>
-                <th></th>
-               <th colspan="4" style="text-align: center">День</th>
-                <th colspan="4" style="text-align: center">См. 1</th>
-                <th colspan="4" style="text-align: center">См. 2</th>
-                <th colspan="4" style="text-align: center">См. 3</th>
-
-            </tr>
-
-            <tr style="text-align: center">
-               <th>Дата</th>
-                <th>Наимен</th>
-               <th>Всего</th>
-                <th>Подтв</th>
-                <th>Не<br>подтв</th>
-                <th>РК</th>
-                            <th>Всего</th>
-                <th>Подтв</th>
-                <th>Не<br>подтв</th>
-                <th>РК</th>
-                            <th>Всего</th>
-                <th>Подтв</th>
-                <th>Не<br>подтв</th>
-                <th>РК</th>
-                            <th>Всего</th>
-                <th>Подтв</th>
-                <th>Не<br>подтв</th>
-                <th>РК</th>
-            </tr>
-          </thead>
-
-          <tbody>
-              {% for key_date, value in day_reports.items %}
-
-
-
-
-                <tr class="text-end">
-                    <td>{{ key_date|date:'d.m.Y' }}</td>
-                    <td><div>Сумма</div><div>Кол-во</div></td>
-                  {% for step_name, step_value in value.items %}
-
-                    <td style="width: 50px; border-left-width: 5px"><div>{{  step_value.step_sum|floatformat:0 }}</div><div>{{  step_value.count }}</div></td>
-                    <td style="width: 50px; color: #4cae4c">{{ step_value.confirm_sum|floatformat:0 }}<div>{{ step_value.confirm_count }}</div></td>
-                    <td style="width: 50px; color: #8a6d3b">{{ step_value.unconfirm_sum|floatformat:0 }}<div>{{ step_value.unconfirm_count }}</div></td>
-                    <td style="width: 50px; color: #d19b3d; border-right-width: 5px"> {{ step_value.rk_sum|floatformat:0 }}<div>{{ step_value.count_rk }}</div></td>
-
-
-                  {% endfor %}
-{#                    <td><div>{{  value.step1.step_sum|floatformat:0 }}</div><div>{{  value.step1.count }}</div></td>#}
-{#                    <td style="width: 50px">{{ value.step1.confirm_sum|floatformat:0 }}<div>{{ value.step1.confirm_count }}</div></td>#}
-{#                    <td style="width: 50px">{{ value.step1.unconfirm_sum|floatformat:0 }}<div>{{ value.step1.unconfirm_count }}</div></td>#}
-{#                    <td style="width: 50px"> {{ value.step1.rk_sum|floatformat:0 }}<div>{{ value.step1.count_rk }}</div></td>#}
-{#                #}
-{#                    <td style="width: 50px"><div>{{  value.step2.step_sum|floatformat:0 }}</div><div>{{  value.step2.count }}</div></td>#}
-{#                    <td style="width: 50px">{{ value.step2.confirm_sum|floatformat:0 }}<div>{{ value.step2.confirm_count }}</div></td>#}
-{#                    <td style="width: 50px">{{ value.step2.unconfirm_sum|floatformat:0 }}<div>{{ value.step2.unconfirm_count }}</div></td>#}
-{#                    <td style="width: 50px"> {{ value.step2.rk_sum|floatformat:0 }}<div>{{ value.step2.count_rk }}</div></td>#}
-{#                #}
-{#                    <td style="width: 50px"><div>{{  value.step3.step_sum|floatformat:0 }}</div><div>{{  value.step3.count }}</div></td>#}
-{#                    <td style="width: 50px">{{ value.step3.confirm_sum|floatformat:0 }}<div>{{ value.step3.confirm_count }}</div></td>#}
-{#                    <td style="width: 50px">{{ value.step3.unconfirm_sum|floatformat:0 }}<div>{{ value.step3.unconfirm_count }}</div></td>#}
-{#                    <td style="width: 50px"> {{ value.step3.rk_sum|floatformat:0 }}<div>{{ value.step3.count_rk }}</div></td>#}
-
-                </tr>
-              {% endfor %}
-          </tbody>
-
-        </table>
-
-    </div>
-
-    </div>
+{% endwith %}
 {% endblock %}
