--- a/backend_deposit/templates/deposit/incomings_list.html
+++ b/backend_deposit/templates/deposit/incomings_list.html
@@ -18,7 +18,7 @@
 
     <span class="row justify-content-start">
       <div class="col-6">
-        <form method="GET" target="_blank">
+        <form method="GET">
 
           {% if search_form %}
             {{ search_form.as_p }}
