--- a/backend_deposit/templates/includes/stats_card_table.html
+++ b/backend_deposit/templates/includes/stats_card_table.html
@@ -19,7 +19,7 @@
   <tbody>
     {% for obj in cards %}
       <tr class="text-end">
-        <td><span>{{ obj.recipient }}</span><br><span>{{obj.text}}</span></td>
+        <td><span>{{ obj.recipient }}</span><br><span></span></td>
         <td>{{ obj.last_id }}</td>
         <td>{{ obj.last_date|date:'d.m.Y' }}</td>
         <td>{{ obj.count }}</td>
