--- a/backend_deposit/templates/deposit/test.html
+++ b/backend_deposit/templates/deposit/test.html
@@ -3,7 +3,6 @@
 
 
 {% block content %}
-
-<img src='data:image/png;base64,{{fig}}'/>
+<div><img src='data:image/png;base64,{{fig1}}'/></div>
 
 {% endblock %}
