--- a/backend_deposit/templates/includes/stats_day_table.html
+++ b/backend_deposit/templates/includes/stats_day_table.html
@@ -39,10 +39,10 @@
           <td><div>Сумма</div><div>Кол-во</div></td>
 
             {% for step_name, step_value in value.items %}
-              <td style="width: 50px; border-left-width: 5px"><div>{{  step_value.step_sum|floatformat:0 }}</div><div>{{  step_value.count }}</div></td>
-              <td style="width: 50px; color: #4cae4c">{{ step_value.confirm_sum|floatformat:0 }}<div>{{ step_value.confirm_count }}</div></td>
-              <td style="width: 50px; color: #8a6d3b">{{ step_value.unconfirm_sum|floatformat:0 }}<div>{{ step_value.unconfirm_count }}</div></td>
-              <td style="width: 50px; color: #d19b3d; border-right-width: 5px"> {{ step_value.rk_sum|floatformat:0 }}<div>{{ step_value.count_rk }}</div></td>
+              <td style="width: 50px; border-left-width: 5px"><div>{{  step_value.step_sum|default_if_none:0|floatformat:0 }}</div><div>{{  step_value.count|default_if_none:0 }}</div></td>
+              <td style="width: 50px; color: #4cae4c">{{ step_value.confirm_sum|default_if_none:0|floatformat:0 }}<div>{{ step_value.confirm_count|default_if_none:0 }}</div></td>
+              <td style="width: 50px; color: #8a6d3b">{{ step_value.unconfirm_sum|default_if_none:0|floatformat:0 }}<div>{{ step_value.unconfirm_count|default_if_none:0 }}</div></td>
+              <td style="width: 50px; color: #d19b3d; border-right-width: 5px"> {{ step_value.rk_sum|default_if_none:0|floatformat:0 }}<div>{{ step_value.count_rk|default_if_none:0 }}</div></td>
             {% endfor %}
       </tr>
     {% endfor %}
