--- a/backend_deposit/templates/deposit/message_view.html
+++ b/backend_deposit/templates/deposit/message_view.html
@@ -5,7 +5,7 @@
       <div class="col-md-6 mx-auto">
           <div class="card">
           <div class="card-header"  {% if not message.is_read %}style="font-weight: 700" {% endif %}>
-              <span>{{ message.is_read }}{{ message.id }}. {{ message.created }}<br>{{ message.title }}</span>
+              <span>{{ message.id }}. {{ message.created }}<br>{{ message.title }}</span>
           </div>
 
           <div class="card-body">
@@ -23,5 +23,4 @@
         <a href="{% url 'deposit:messages' %}" class="btn btn-info btn-sm">К списку сообщений</a>
           </div><hr>
       </div>
-{{ form }}
 {% endblock %}
