--- a/backend_deposit/templates/ocr/ScreenCreate.html
+++ b/backend_deposit/templates/ocr/ScreenCreate.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-
+{% include 'includes/operator_menu.html' %}
     <form method="post" enctype="multipart/form-data" action="{% url 'ocr:screen_create' %}">
     {% csrf_token %}
         {{ form.as_p }}
