--- a/backend_deposit/templates/ocr/ScreenList.html
+++ b/backend_deposit/templates/ocr/ScreenList.html
@@ -36,10 +36,10 @@
     </table>
 </div>
     Общие пары: {{ intersect|length }}
-    <div>{% for pair in intersect %}
-         {{ pair }}<br>
-         {% endfor %}
-    </div>
+{#    <div>{% for pair in intersect %}#}
+{#         {{ pair }}<br>#}
+{#         {% endfor %}#}
+{#    </div>#}
 {% include 'includes/paginator.html' %}
 
 {% endblock %}
