--- a/backend_deposit/templates/ocr/ScreenList.html
+++ b/backend_deposit/templates/ocr/ScreenList.html
@@ -41,5 +41,12 @@
 {#         {% endfor %}#}
 {#    </div>#}
 {% include 'includes/paginator.html' %}
-
+<div class="col-md-3">
+    <form method="get" enctype="multipart/form-data" action="{% url 'ocr:screen_list' %}">
+        {% include 'includes/form_fields.html' %}
+        <button name="button1" type="submit" class="btn btn-primary">
+          Найти
+        </button>
+</form>
+</div>
 {% endblock %}
