--- a/backend_deposit/templates/includes/operator_menu.html
+++ b/backend_deposit/templates/includes/operator_menu.html
@@ -48,7 +48,7 @@
 {#          <a class="nav-link"href="{% url 'deposit:deposits_pending' %}">Депозиты</a>#}
 {#          </li>#}
           <li class="nav-item">
-          <a class="nav-link" href="{% url 'deposit:incomings' %}">Платежи</a>
+          <a class="nav-link" href="{% url 'payment:payment_list' %}">Заявки</a>
           </li>
           <li class="nav-item">
           <a class="nav-link" href="{% url 'admin:index' %}">Админка</a>
